# xalgo

./: CMakeLists.txt  Dockerfile  README.md  cargo.toml  docker-compose.yml  requirements.txt  settings.json
.github/workflows/: backtest-cicd.yml
backtest/: metrics.py
config/: config.yaml
config/prod/: zmq_config.json
config/test/: test_data_integrity.py  test_execution.py  test_market_impact.py  test_performance.py  test_regime_detection.py
core/: indicators.py
data/: clean_utils.py
include/core/Risk/: RiskManager.hpp
include/core/interfaces/: IExecutionManager.hpp  IHeartbeatMonitor.hpp  IOrderRouter.hpp  IRedundancyManager.hpp  ISignalGenerator.hpp  ISimulator.hpp  IVenueAdapter.hpp  ZeroMQConnectionManager.hpp
include/core/models/: MarketData.hpp  MarketRegime.hpp  Order.hpp  Position.hpp  Signal.hpp  Trade.hpp  Venue.hpp
models/: model_runner.py
src/: ExecutionManager.cpp  main.cpp
src/core/execution/: ExecutionManager.cpp
src/core/interface/: ICircuitBreaker.hpp  IConnectionPoolManager.hpp  IFailoverOrchestrator.hpp  IMultiBrokerAPIManager.hpp
src/core/messaging/: ZMQPubSubHandler.cpp  ZMQPubSubHandler.hpp  ZeroMQConnectionManager.cpp  ZeroMQConnectionManager.hpp
src/core/redundancy/: RedundancyManager.rs
src/core/router/: SmartOrderRouter.cpp
src/core/simulator/: InternalSimulator.py  latency_emulator.py  market_replay_engine.py  routing_performance_assessment.py  scenario_designer.py  synthetic_order_book.py
src/cpp/: main.cpp
src/signal/: SignalEngine.cpp
src/tests/: test_data_integrity.py  test_execution.py  test_market_impact.py  test_performance.py  test_regime_detection.py  test_throughput.py
test_data/: sample_tick_data.csv
trading/: broker_interface.py  executor.py
